--- a/trunk/paper/cmsc636-swarmvis.bib
+++ b/trunk/paper/cmsc636-swarmvis.bib
@@ -4,7 +4,7 @@ Begin: Toolkits
 ########################################################
 
 @article{Luke,
- author = {Sean Luke and Claudio Cioffi-Revilla and Liviu Panait and Keith Sullivan and Gabriel Balan},
+ author = {Luke, S. and Cioffi-Revilla, C. and Panait, L. and Sullivan K. and Balan, G.},
  title = {MASON: A Multiagent Simulation Environment},
  journal = {Simulation},
  volume = {81},
@@ -19,7 +19,7 @@ Begin: Toolkits
  }
  
 @MISC{mason:website,
-      author = {Kenneth De Jong and Sean Luke},
+      author = {De Jong, K. and Luke, S.},
       title = {MASON Multiagent Simulation Toolkit},
       month = {September},
       year = {2008},
@@ -33,7 +33,7 @@ begin: BREVE related papers
 ########################################################
 
 @inproceedings{860347,
- author = {Jon Klein},
+ author = {Klein, J.},
  title = {breve: a 3D environment for the simulation of decentralized systems and artificial life},
  booktitle = {ICAL 2003: Proceedings of the eighth international conference on Artificial life},
  year = {2003},
@@ -45,7 +45,7 @@ begin: BREVE related papers
  }
  
 @MISC{breve:website,
-       author = {John Klein},
+       author = {Klein, J.},
       title = {The breve Simulation Environment},
       month = {September},
       year = {2008},
@@ -54,7 +54,7 @@ begin: BREVE related papers
 
 
 @INPROCEEDINGS{Spector02evolutionarydynamics,
-    author = {Lee Spector and Jon Klein},
+    author = {Spector, L. and Klein, J.},
     title = {Evolutionary dynamics discovered via visualization in the BRAVE simulation environment},
     booktitle = {Eds.), Workshop Proc. of ALife VIII, UNSW},
     year = {2002},
@@ -64,7 +64,7 @@ begin: BREVE related papers
 }
 
 @inproceedings{Boyd,
- author = {Jeffrey E. Boyd and Gerald Hushlak and Christian J. Jacob},
+ author = {Boyd, J. and Hushlak, G. and Jacob, C.},
  title = {SwarmArt: interactive art from swarm intelligence},
  booktitle = {MULTIMEDIA '04: Proceedings of the 12th annual ACM international conference on Multimedia},
  year = {2004},
@@ -117,16 +117,16 @@ Begin: Other documents/websites
 ########################################################
 
 @BOOK{Merzkirch,
-   author = "Wolfgang Merzkirch",
+   author = "Merzkirch, W.",
    title= "Flow Visualization Second Edition",
    publisher = "Academic Press Inc. (London) Ltd.",
    year = 1987
    }
    
 @MISC{codeswarm:website,
-      author = {Michael Ogawa},
-      title = {code\_swarm},
-      month = {September},
+      author = {Ogawa, M.},
+      title = {Code Swarm},
+      month = {Website last accessed September},
       year = {2008},
       note = {http://vis.cs.ucdavis.edu/~ogawa/codeswarm/}
 }
@@ -161,7 +161,7 @@ Also discuss in detail in the paper is the implementation of the visualization t
 }
 
 @article{ 10.1109/TVCG.2005.87,
-author = {Jens Kruger and Peter Kipfer and Polina Kondratieva and Ruediger Westermann},
+author = {Kruger, J. and Kipfer, P. and Kondratieva, P. and Westermann, R.},
 title = {A Particle System for Interactive Visualization of 3D Flows}, journal ={IEEE Transactions on Visualization and Computer Graphics}, volume = {11}, number = {6}, issn = {1077-2626}, year = {2005}, pages = {744-756}, doi = {http://doi.ieeecomputersociety.org/10.1109/TVCG.2005.87},
 publisher = {IEEE Computer Society},
 address = {Los Alamitos, CA, USA},
@@ -169,6 +169,17 @@ annote = {The authors of this paper present a system that visualizes steady 3D f
 Although we are not particularly interested in the hardware issues presented in this paper, the authors do discuss some visualization techniques for displaying particles. The authors provide sample output images with particles represented as simple spheres, ellipsoids that show orientation, or arrows that show direction. Also, some visualizations shown introduce color as an indicator of the velocity of the particle. The authors also suggest that you render the particles in sorted order according to the distance to the actor. This way, particles that should be ``in front'' of the other ones are rendered last. The authors also discuss the concept of ``stream ribbons:'' basically a streamline that looks like a ribbon. This has the advantage over streamlines that it shows the rotation of the particle, as well as previous locations.}
 }
 }
+
+%%%%% RANDOM STUFF %%%%%%
+
+   
+@MISC{Qt:website,
+      title = {Qt},
+      month = {Website last accessed November},
+      year = {2008},
+      note = {http://trolltech.com/}
+}
+
 
 
 %%%%% BEGIN GENERIC SWARM INTELLIGENCE CITATIONS %%%%%%%
