--- a/trunk/paper/cmsc636-swarmvis.tex
+++ b/trunk/paper/cmsc636-swarmvis.tex
@@ -83,7 +83,7 @@ information than Figure \ref{Intro} (left).
 
 \begin{figure}[ht]
 \centering
-\includegraphics[scale=.55]{images/intro.pdf}
+\includegraphics[scale=.59]{images/intro.pdf}
 \caption{(Left) A basic visualization of a boid flock with agents are plotted as
 points in space. The image only conveys positional and limited structural information.
 (Right) A visualization of the boid flock using SwarmVis. Agent
@@ -125,7 +125,7 @@ Our work is partially inspired by the lack of a coherent collection of effective
 
 \begin{figure}
 \centering
-\includegraphics[scale=.3]{images/SwarmArt.pdf}
+\includegraphics[scale=.333333]{images/SwarmArt.pdf}
 \caption{A visualization created by Boyd et al. with SwarmArt\cite{Boyd}.}
 \label{SwarmArt}
 \end{figure}
@@ -140,7 +140,7 @@ in SwarmVis.
 
 \begin{figure}
 \centering
-\includegraphics[scale=.4]{images/blob.pdf}
+\includegraphics[scale=.5]{images/blob.pdf}
 \caption{An ``information flocking" visualization created by Moere\cite{1382896}.}
 \label{Blob}
 \end{figure}
@@ -378,9 +378,9 @@ image of Figure \ref{Velocity}).}
 \label{VelocityTab}
 \end{figure}
 
-\begin{figure*}
+\begin{figure}
 \centering
-\includegraphics[scale=.666667]{images/velocity.pdf}
+\includegraphics[scale=.33333]{images/velocity.pdf}
 \caption{
 A captured frame from a swarm of tetrahedra-forming boids shown in Figure \ref{SizeAndColor}.
 On the left, all agent tracks are displayed, showing that agents move faster (the color red) at the beginning.
@@ -389,7 +389,7 @@ On the right, the trails and the agents themselves are colored according to thei
 From this captured frame, it is obvious that the right edge is experiencing movement while the rest of the
 shape is calm. }
 \label{Velocity}
-\end{figure*}
+\end{figure}
 
 \subsubsection{Velocity Color}
 
@@ -502,7 +502,7 @@ Videos would be appropriate for sharing information conveyed by an animation onl
 
 \begin{figure}
 \centering
-\includegraphics[scale=.55]{images/tetrastrategy.pdf}
+\includegraphics[scale=.5]{images/tetrastrategy.pdf}
 \caption{
 The tetrahedron-forming swarm creating its sixth edge with velocity-colored trails enabled.
 }
@@ -528,7 +528,7 @@ Without trails, this phenomena could not have been demonstrated in a single imag
 
 \begin{figure}
 \centering
-\includegraphics[scale=.3]{images/cornervsedge.pdf}
+\includegraphics[scale=.27]{images/cornervsedge.pdf}
 \caption{
 (Left) A comparison of a corner's track and an edge agent's track.
 The two can be contrasted by analyzing the color and structure of the tracks.
